<resources>
    <string name="app_name">Save Energy</string>
    <string name="device_name">DEVICE NAME:</string>
    <string name="text_view">TextView</string>
    <string name="registration">registration</string>
    <string name="user_name">USER NAME:</string>
    <string name="kwh">KWH:</string>
    <string name="password">PASSWORD:</string>
    <string name="usage_time">USAGE TIME:</string>
    <string name="sign_up">SIGN UP</string>
    <string name="save_device">SAVE DEVICE</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>


    <string-array name="countries">
        <item>Palastine</item>
        <item>Sudan</item>
        <item>egypt</item>
        <item>makkah</item>
    </string-array>

    <dimen name="curvedTextViewTextSize">15sp</dimen>
    <string name="percent_value">125 LE</string>
    <string name="total_observations">750 KWH</string>


    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSICS</string>
    <string name="backdrop_subtitle">This season top 20 music</string>

</resources>
