<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.omar.energy.AddDevice">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:layout_margin="20dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/device_name"/>
    </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kwh"

                    android:layout_margin="20dp"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:id="@+id/KWH"
                    />

            </LinearLayout>

            <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/usage_time"
            android:layout_margin="20dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/usage_time"
            />

    </LinearLayout>

    <Button
        android:id="@+id/add_device_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_device"
        android:layout_gravity="center"
        android:onClick="btn_add_device"/>




    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_view">
    </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>


